# starMCPf

./: .coverage  .gitignore  DEMO.md  DEPLOYMENT.md  DEPLOYMENT_RESULTS.md  LICENSE  LOCAL_SETUP.md  README.md  interactive_client.py  interactive_client_lambda.py  local_server.py  mcp_config.json  pyproject.toml  run_with_uvx.sh  test_mcp_client.py  test_simple.sh
examples/: demo_server.py  simple_demo.py
scripts/: deploy_to_aws.sh  package_lambda.py
src/mcp_framework/: __init__.py  simplified.py
src/mcp_framework.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/mcp_framework/core/: handlers.py  protocol.py  server.py
templates/: mcp_lambda_stack.yaml
test_venv/: pyvenv.cfg
tests/: __init__.py  test_calculate_safety.py  test_handlers.py  test_protocol.py  test_server.py  test_simplified.py
